caso_practico_3/services/db-service.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
