caso_practico_3/services/load-balancer.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: app-metabase
