caso_practico_3/services/metabase-service.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase-service
spec:
  type: ClusterIP
  selector:
    app: metabase
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
