caso_practico_3/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /metabase(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: metabase-service
            port: 
              number: 80
